--- a/cjyl-salesman-h5/package.json
+++ b/cjyl-salesman-h5/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "test": "vue-cli-service serve --mode test",
+    "build:test": "vue-cli-service build --mode test",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "axios": "^1.2.1",
