--- a/cjyl-salesman-h5/package.json
+++ b/cjyl-salesman-h5/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build", 
     "test": "vue-cli-service serve --mode test",
+    "build:dev":"vue-cli-service build --mode dev",
     "build:test": "vue-cli-service build --mode test",
     "lint": "vue-cli-service lint"
   },
